Began styling for mobile view, not finished. Added NavDrawer for mobile view.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,3 +43,7 @@ code {
 .MuiSvgIcon-root.MuiChip-deleteIcon {
   color: #9c92ac;
 }
+
+.MuiTypography-root.MuiListItemText-primary.MuiTypography-body1.MuiTypography-displayBlock {
+  font-family: 'Montserrat';
+}
